--- a/src/css/components/carousel.css
+++ b/src/css/components/carousel.css
@@ -51,10 +51,19 @@ Les margin négatifs à gauche et à droite corresponde à l'éespace entre le n
   /* Bordure arrondie pour faire un cercle - https://developer.mozilla.org/fr/docs/Web/CSS/border-radius */
 }
 .carousel__button--prev {
+  transform: rotate(0.5turn);
   /* Fait pivoter le bouton de 180 degrés - https://developer.mozilla.org/fr/docs/Web/CSS/transform */
 }
 
 .carousel__container {
+  display: inline;
+  gap: 16px;
+  overflow: auto;
+  margin-left: -24px;
+  margin-right: -24px;
+  scroll-snap-align: none ;
+
+
   /* Utilise flexbox pour aligner les éléments enfants - https://developer.mozilla.org/fr/docs/Web/CSS/display */
   /* Espace entre les éléments enfants 16px - https://developer.mozilla.org/fr/docs/Web/CSS/gap */
   /* Ajoute un défilement horizontal si le contenu déborde - https://developer.mozilla.org/fr/docs/Web/CSS/overflow */
@@ -64,6 +73,9 @@ Les margin négatifs à gauche et à droite corresponde à l'éespace entre le n
 }
 
 .carousel__item {
+  flex: 1 260px;
+  scroll-snap-align: center ;
+  
   /* L'élément prend 1 part de l'espace disponible, ne rétrécit pas, et a une largeur de base de 260px - https://developer.mozilla.org/fr/docs/Web/CSS/flex */
   /* Aligne l'élément au centre lors du défilement - https://developer.mozilla.org/fr/docs/Web/CSS/scroll-snap-align */
 }
