--- a/src/css/components/carousel.css
+++ b/src/css/components/carousel.css
@@ -84,3 +84,8 @@ Les margin négatifs à gauche et à droite corresponde à l'éespace entre le n
   display: block;
   /* Affiche l'image comme un bloc - https://developer.mozilla.org/fr/docs/Web/CSS/display */
 }
+
+.carousel__item img{
+  width: 100%;
+  height: auto;
+}
